--- a/back/package.json
+++ b/back/package.json
@@ -14,7 +14,9 @@
     "express": "^4.17.2",
     "helmet": "^5.0.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
+    "nodemailer-smtp-pool": "^2.8.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
